# med-lm-train

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/gsm8k/1b/: infer.toml  orch.toml  train.toml
configs/gsm8k/7b/: orch.toml
configs/medcasereasoning/3b/: infer.toml  orch.toml  train.toml
configs/medcasereasoning/7b/: orch.toml
configs/medqa/3b/: orch.toml
configs/medqa/7b/: train.toml
configs/test/: orch.toml
environments/medcasereasoning/: README.md  medcasereasoning.py  pyproject.toml
environments/medcasereasoning/outputs/evals/medcasereasoning--Qwen--Qwen2.5-3B/ca7af09d/: metadata.json  results.jsonl
environments/medcasereasoning/outputs/evals/medcasereasoning--Qwen--Qwen2.5-7B/dd61ca9d/: metadata.json  results.jsonl
environments/medcasereasoning/outputs/evals/medcasereasoning--gpt-5-nano/f0331182/: metadata.json  results.jsonl
examples/alphabet_sort/: README.md  rl.toml
examples/hendrycks_sanity/: README.md  rl.toml
examples/reverse_text/: README.md  rl.toml  rl_multi.toml  rl_single.toml  rl_slurm.toml  sft.toml
medarc_rl/: medarc_slurm.py  medarc_train.py  utils.py
medarc_rl/launchers/: __init__.py  rl_local.py
medarc_rl/slurm_templates/: one_node_rl.j2  one_node_sft.j2
tests/: test_auth.py  test_medarc_slurm.py  test_medarc_train.py
