[project]
name = "medcasereasoning"
version = "0.1.0"
description = "MedCaseReasoning medical diagnosis evaluation"
tags = ["medical", "reasoning", "single-turn", "llm-judge", "diagnosis"]
dependencies = [
    "verifiers>=0.1.2.post0",
    "datasets",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["medcasereasoning.py"]